# try-outbox-pattern

./: .env.local  .env.local.example  .gitignore  Cargo.toml  Dockerfile.migration  README.md  compose.yaml  migration.dockerfile
.sqlx/: query-006f8158b35b57ec503113f9d8caf2bd43c98219572f99dacbe90c5558811fcd.json  query-1b65883eb489a7f58a459bb4af8601e32b6ad8af4fd2867b5d0cd3bce0cf24f3.json  query-58ced9a945243dcb45b402c9b4442395091cb5bd4077fc5c38a04d65a4f45cfe.json  query-6c013d574f02ee7615aab2eab8c88cdf74549d2eeab3b2ae3241d8b22b873f77.json  query-6cdabf788df95754ed31c0631c102b7f173c55e8e54e1358e32752127b0e1860.json  query-839f723633785715876d4c9472430659dfc35f149a4a5a645d286472f8d9c470.json  query-c1cfd76148b41fe09786469ea27f1db5eb07ec0ac349c8ba9439fec8cd92ab26.json  query-d0ff5385e1d10f2cfed2ffd41dfc951e292612bee4c931dedded9fc2385f755c.json  query-e3a0fb9a514b939b5e45822c89ab9b348648ad0276984afdd82dcf67d8723a5c.json  query-ea68f4c9323644f1bab5a081780fd0f808078f0c61392eca9fbfa22948eef2d3.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/consumer/: Cargo.toml
crates/consumer/src/: main.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: main.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  stream_sampler.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
migrations/: 20250411011524_post.down.sql  20250411011524_post.up.sql
rabbitmq-local/: definitions.json  rabbitmq.conf
