[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
lapin = { version = "3.0.0-beta.3" }
tokio-executor-trait = { version = "2.1" }
tokio-reactor-trait = { version = "2.0" }
futures-util = { version = "0.3" }
envy = { version = "0.4" }

