[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
event = { path = "../event" }
chrono = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
