[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
event = { path = "../event" }
